use doctrine nested tree for team hierarchy

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -35,3 +35,9 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    Gedmo\Tree\TreeListener:
+        tags:
+            -  name: doctrine.event_subscriber
+               connection: default
+        calls:
+            - [ setAnnotationReader, [ "@annotation_reader" ] ]
