--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "doctrine/doctrine-bundle": "^2.5",
     "doctrine/doctrine-migrations-bundle": "^3.2",
     "doctrine/orm": "^2.10",
+    "gedmo/doctrine-extensions": "^3.11",
     "knpuniversity/oauth2-client-bundle": "^2.5",
     "laminas/laminas-code": "^4.5",
     "laminas/laminas-escaper": "^2.6",
@@ -22,6 +23,7 @@
     "phpstan/phpdoc-parser": "^1.2",
     "sensio/framework-extra-bundle": "^6.2",
     "stevenmaguire/oauth2-keycloak": "^2.2",
+    "stof/doctrine-extensions-bundle": "^1.7",
     "symfony/apache-pack": "^1.0",
     "symfony/asset": "6.2.*",
     "symfony/console": "6.2.*",
